--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.gson-2.2.2.jar=D:\\FU\\Sem7\\SWD391\\gson-2.2.2.jar
+file.reference.gson-2.2.2.jar-1=C:\\Users\\DELL\\Desktop\\gson-2.2.2.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,7 +41,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.struts2lib-2-3-15.classpath}:\
     ${file.reference.gson-2.2.2.jar}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.gson-2.2.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
